Add Alpine 3.3 image

--- a/circle.yml
+++ b/circle.yml
@@ -3,12 +3,6 @@ machine:
     - docker
 
 dependencies:
-#  cache_directories:
-#    - "~/deps"
-#  pre:
-#    - if [[ ! -e ~/deps/bats_v0.4.0.tar.gz ]]; then mkdir -p ~/deps; curl -sSL -o ~/deps/bats_v0.4.0.tar.gz https://github.com/sstephenson/bats/archive/v0.4.0.tar.gz; fi
-#    - tar -xf ~/deps/bats_v0.4.0.tar.gz
-#    - sudo bats-0.4.0/install.sh /usr/local
   override:
     - docker info
     - make build
@@ -28,5 +22,6 @@ deployment:
   hub:
     branch: master
     commands:
-      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - make release
+      - $DEPLOY_TO_HUB
+      #- docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      #- make release
