--- a/circle.yml
+++ b/circle.yml
@@ -22,6 +22,7 @@ deployment:
   hub:
     branch: master
     commands:
-      - curl -H "Content-Type: application/json" --data '{"build": true}' -X POST https://registry.hub.docker.com/u/janeczku/alpine-kubernetes/trigger/$HUB_TRIGGER_TOKEN/
+      - make git-tag
+      - $DOCKER_HUB_TRIGGER
       #- docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       #- make release
