DNS resolver logs to file instead of stdout; Make symbolic links for rootfs

--- a/versions/3.3/Dockerfile
+++ b/versions/3.3/Dockerfile
@@ -2,23 +2,17 @@ FROM alpine:3.3
 MAINTAINER Jan Broer <janeczku@yahoo.com>
 
 ##
-## RootFS
-##
-
-COPY rootfs /
-
-##
 ## Add bind-tools
 ##
 
-RUN apk-install bind-tools
+RUN apk add --update bind-tools && \
+    rm -rf /var/cache/apk/*
 
 ##
 ## S6 Overlay && go-dnsmasq
 ##
 
-ENV S6_VERSION v1.17.1.1
-ENV GODNSMASQ_VERSION 0.9.8
+ENV S6_VERSION=v1.17.1.1 GODNSMASQ_VERSION=0.9.8
 
 ADD https://github.com/just-containers/s6-overlay/releases/download/${S6_VERSION}/s6-overlay-amd64.tar.gz /tmp/s6-overlay.tar.gz
 
@@ -27,6 +21,12 @@ ADD https://github.com/janeczku/go-dnsmasq/releases/download/${GODNSMASQ_VERSION
 RUN tar xvfz /tmp/s6-overlay.tar.gz -C / \
     && chmod 755 /usr/sbin/go-dnsmasq \
     && rm -rf /tmp/*
+
+##
+## RootFS
+##
+
+COPY rootfs /
 
 ##
 ## Init
